# crea-platform

./: PRODUTO.md  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
